# jarvis

./: .gitignore  README.md  config.example.yaml  config.py  install.ps1  main.py  package.ps1  pyproject.toml  requirements.txt  run.ps1
assistant/: __init__.py  confirmation.py  conversation.py  desktop_runtime.py  intent_router.py  models.py  orchestrator.py  permissions.py  state.py  voice_runtime.py
audio/: __init__.py  interruption.py  recorder.py  speech_to_text.py  text_to_speech.py  voice_activity.py  wake_word.py
llm/: __init__.py  context_manager.py  ollama_client.py  prompts.py  tool_parser.py
memory/: __init__.py  database.py  preferences.py  short_term.py  storage.py
tests/: test_applications.py  test_browser.py  test_config.py  test_files.py  test_hotkeys.py  test_image_utils.py  test_input_safety.py  test_intent_router.py  test_media_controls.py  test_memory.py  test_music.py  test_ollama_client.py  test_orchestrator_memory.py  test_permissions.py  test_screen_analyzer.py  test_screenshot.py  test_settings.py  test_speech_to_text.py  test_spotify.py  test_state.py  test_text_to_speech.py  test_tool_registry.py  test_tray.py  test_vision_tools.py  test_voice_activity.py  test_voice_runtime.py  test_wake_word.py  test_windows_tools.py
tools/: __init__.py  applications.py  base.py  browser.py  clipboard.py  files.py  folders.py  keyboard_mouse.py  media_controls.py  memory_tools.py  music.py  registry.py  spotify.py  system_info.py  vision_tools.py  windows.py
ui/: __init__.py  notifications.py  settings_window.py  status_window.py  tk_host.py  (+1 more)
(+9 files in other folders)
