[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-local-windows"
version = "0.5.0"
description = "Private local Windows assistant using Ollama and gemma64"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { text = "MIT" }
dependencies = [
  "pydantic>=2.10,<3",
  "PyYAML>=6.0.2,<7",
  "httpx>=0.28.1,<1",
  "psutil>=6.1.1,<8",
  "pywin32>=308; sys_platform == 'win32'",
  "RapidFuzz>=3.12.1,<4",
  "numpy>=2.1,<3",
  "sounddevice>=0.5.5,<1",
  "faster-whisper>=1.2.1,<2",
  "piper-tts>=1.4.2,<2",
  "openwakeword>=0.6,<1",
  "pystray>=0.19.5,<1",
  "Pillow>=11,<13",
  "mss>=10,<11",
  "winrt-runtime>=3.2,<4; sys_platform == 'win32'",
  "winrt-Windows.Foundation>=3.2,<4; sys_platform == 'win32'",
  "winrt-Windows.Media>=3.2,<4; sys_platform == 'win32'",
  "winrt-Windows.Media.Control>=3.2,<4; sys_platform == 'win32'",
  "pycaw>=20251023; sys_platform == 'win32'",
]

[project.optional-dependencies]
test = ["pytest>=8.3.4,<10"]
documents = ["pypdf>=5,<7", "python-docx>=1.1.2,<2"]
packaging = ["pyinstaller>=6.21,<7"]

[project.scripts]
jarvis = "main:cli"

[tool.setuptools]
py-modules = ["main", "config"]

[tool.setuptools.packages.find]
include = ["assistant*", "llm*", "tools*", "memory*", "utils*", "audio*", "vision*", "ui*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
